@@ -33,6 +33,9 @@
 						###MESSAGE### <em>###VALUE###</em>
 						<!-- ###CURRENT### end -->
 					</label>
+					<!-- ###ERROR### begin -->
+					<p class="typo3-message message-error">###ERRORMESSAGE###</p>
+					<!-- ###ERROR### end -->
 				</li>
 				<!-- ###ROWS### end -->
 				<!-- ###WARNINGS### begin -->
