@@ -1,3 +1,7 @@
+2010-12-01  Ernesto Baschny  <ernst@cron-it.de>
+
+	* Added Feature #15604: Install-Tool usability: db compare shows no errors when db-updates fail
+
 2010-12-01  Francois Suter  <francois@typo3.org>
 
 	* Feature #16609: Usability: Add new label for workspace preview
